unpackaged/main/default/objects/ContactUs_Setting__c/ContactUs_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ContactUs Setting</label>
</CustomObject>