unpackaged/main/default/objects/ContactUs_Setting__c/fields/ReCaptchaEndPoint__c.field-meta.xml
<CustomField>
    <fullName>ReCaptchaEndPoint__c</fullName>
    <label>ReCaptchaEndPoint</label>
    <type>Url</type>
</CustomField>