unpackaged/main/default/objects/ContactUs_Setting__c/fields/ReCaptchaSecretKey__c.field-meta.xml
<CustomField>
    <fullName>ReCaptchaSecretKey__c</fullName>
    <description>Secret key for google reCaptcha v2</description>
    <label>ReCaptchaSecretKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>