unpackaged/main/default/objects/ContactUs_Setting__c/fields/ReCaptchaSiteKey__c.field-meta.xml
<CustomField>
    <fullName>ReCaptchaSiteKey__c</fullName>
    <description>Site key for google reCaptcha v2.</description>
    <label>ReCaptchaSiteKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>